Update command data for Kia/Stinger

--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -73,19 +73,29 @@ supported_commands_by_ecu:
   - 7E2.7EA.22E004:KIA_VPWR_V3
 unsupported_commands_by_ecu:
   "770":
+  - 770.778.22BC05:KIA_HAZARD_SW,KIA_HL_SW
   - 770.778.22BC07:KIA_DEFOG_LIGHT
   - 770.778.22BC09:KIA_HL_HIGH,KIA_HL_LOW
   "7B3":
   - 7B3.7BB.220100|fc=1:KIA_TEMP_EXT,KIA_TEMP_INT,KIA_VSS
+  "7C6":
+  - 7C6.7CE.22B002|fc=1:KIA_CLUSTER_VOLTAGE,KIA_FLI_VOL,KIA_ODO_KM,KIA_ODO_MI,KIA_VPWR
+  "7D1":
+  - 7D1.7D9.220104:KIA_BRAKE_P_V2,KIA_STEER_ANGLE_V2,KIA_TC_SWITCH_V2,KIA_TIRE_FL_VSS_V2,KIA_TIRE_FR_VSS_V2,KIA_TIRE_RL_VSS_V2,KIA_TIRE_RR_VSS_V2,KIA_VSS_AVG_V2
+  "7D4":
+  - 7D4.7DC.220101:KIA_BMS_CHG_PWR,KIA_BMS_DISCHG_PWR,KIA_BMS_MIN_TEMP,KIA_BMS_MOD1_TEMP,KIA_BMS_MOD2_TEMP,KIA_BMS_MOD3_TEMP,KIA_BMS_MOD4_TEMP,KIA_BMS_SOC
   "7E0":
   - 7E0.7E8.2221A0:KIA_ATF_TEMP
+  - 7E0.7E8.22ED02:KIA_EOT_V2
   "7E1":
   - 7E1.7E9.0121
   - 7E1.7E9.21A0:KIA_ATF_T,KIA_GEAR,KIA_VSS_V3
   "7E2":
   - 7E2.7EA.2101:KIA_VSS_V2
   "7E4":
+  - 7E4.7EC.2104|fc=1:KIA_HVBAT_CMU065_VOLT_V2,KIA_HVBAT_CMU066_VOLT_V2,KIA_HVBAT_CMU067_VOLT_V2,KIA_HVBAT_CMU068_VOLT_V2,KIA_HVBAT_CMU069_VOLT_V2,KIA_HVBAT_CMU070_VOLT_V2,KIA_HVBAT_CMU071_VOLT_V2,KIA_HVBAT_CMU072_VOLT_V2,KIA_HVBAT_CMU073_VOLT_V2,KIA_HVBAT_CMU074_VOLT_V2,KIA_HVBAT_CMU075_VOLT_V2,KIA_HVBAT_CMU076_VOLT_V2,KIA_HVBAT_CMU077_VOLT_V2,KIA_HVBAT_CMU078_VOLT_V2,KIA_HVBAT_CMU079_VOLT_V2,KIA_HVBAT_CMU080_VOLT_V2,KIA_HVBAT_CMU081_VOLT_V2,KIA_HVBAT_CMU082_VOLT_V2,KIA_HVBAT_CMU083_VOLT_V2,KIA_HVBAT_CMU084_VOLT_V2,KIA_HVBAT_CMU085_VOLT_V2,KIA_HVBAT_CMU086_VOLT_V2,KIA_HVBAT_CMU087_VOLT_V2,KIA_HVBAT_CMU088_VOLT_V2,KIA_HVBAT_CMU089_VOLT_V2,KIA_HVBAT_CMU090_VOLT_V2,KIA_HVBAT_CMU091_VOLT_V2,KIA_HVBAT_CMU092_VOLT_V2,KIA_HVBAT_CMU093_VOLT_V2,KIA_HVBAT_CMU094_VOLT_V2,KIA_HVBAT_CMU095_VOLT_V2,KIA_HVBAT_CMU096_VOLT_V2
   - 7E4.7EC.220101|fc=1:KIA_C_V_MAX,KIA_C_V_MAX_ID,KIA_C_V_MIN,KIA_C_V_MIN_ID,KIA_DRIVE_TIME,KIA_HVBAT_CHARGING,KIA_HVBAT_CHRG_TOT_C,KIA_HVBAT_CHRG_TOT_E,KIA_HVBAT_CURR,KIA_HVBAT_DSCH_TOT_C,KIA_HVBAT_DSCH_TOT_E,KIA_HVBAT_FAN,KIA_HVBAT_FAN_STATUS,KIA_HVBAT_INLET_T,KIA_HVBAT_MOD1_T,KIA_HVBAT_MOD2_T,KIA_HVBAT_MOD3_T,KIA_HVBAT_MOD4_T,KIA_HVBAT_PLUG_NORM,KIA_HVBAT_PLUG_RAPD,KIA_HVBAT_SOC,KIA_HVBAT_T_MAX,KIA_HVBAT_T_MIN,KIA_HVBAT_VDC,KIA_IGN,KIA_INVRT_CV,KIA_ISO_R,KIA_RPM,KIA_VPWR_V2
   - 7E4.7EC.220102|fc=1:KIA_HVBAT_CMU001_VOLT,KIA_HVBAT_CMU002_VOLT,KIA_HVBAT_CMU003_VOLT,KIA_HVBAT_CMU004_VOLT,KIA_HVBAT_CMU005_VOLT,KIA_HVBAT_CMU006_VOLT,KIA_HVBAT_CMU007_VOLT,KIA_HVBAT_CMU008_VOLT,KIA_HVBAT_CMU009_VOLT,KIA_HVBAT_CMU010_VOLT,KIA_HVBAT_CMU011_VOLT,KIA_HVBAT_CMU012_VOLT,KIA_HVBAT_CMU013_VOLT,KIA_HVBAT_CMU014_VOLT,KIA_HVBAT_CMU015_VOLT,KIA_HVBAT_CMU016_VOLT,KIA_HVBAT_CMU017_VOLT,KIA_HVBAT_CMU018_VOLT,KIA_HVBAT_CMU019_VOLT,KIA_HVBAT_CMU020_VOLT,KIA_HVBAT_CMU021_VOLT,KIA_HVBAT_CMU022_VOLT,KIA_HVBAT_CMU023_VOLT,KIA_HVBAT_CMU024_VOLT,KIA_HVBAT_CMU025_VOLT,KIA_HVBAT_CMU026_VOLT,KIA_HVBAT_CMU027_VOLT,KIA_HVBAT_CMU028_VOLT,KIA_HVBAT_CMU029_VOLT,KIA_HVBAT_CMU030_VOLT,KIA_HVBAT_CMU031_VOLT,KIA_HVBAT_CMU032_VOLT
   - 7E4.7EC.220105|fc=1:KIA_HVBAT_CMU097_VOLT,KIA_HVBAT_CMU098_VOLT,KIA_HVBAT_C_DEV_V,KIA_HVBAT_DET_MAX_ID,KIA_HVBAT_DET_MIN,KIA_HVBAT_DET_MIN_ID,KIA_HVBAT_HTR1_T,KIA_HVBAT_HTR2_T,KIA_HVBAT_SOC_DISP,KIA_HVBAT_SOH,KIA_HVBAT_WH
+  - 7E4.7EC.22010B|fc=1:KIA_HVBAT_CMU129_VOLT,KIA_HVBAT_CMU130_VOLT,KIA_HVBAT_CMU131_VOLT,KIA_HVBAT_CMU132_VOLT,KIA_HVBAT_CMU133_VOLT,KIA_HVBAT_CMU134_VOLT,KIA_HVBAT_CMU135_VOLT,KIA_HVBAT_CMU136_VOLT,KIA_HVBAT_CMU137_VOLT,KIA_HVBAT_CMU138_VOLT,KIA_HVBAT_CMU139_VOLT,KIA_HVBAT_CMU140_VOLT,KIA_HVBAT_CMU141_VOLT,KIA_HVBAT_CMU142_VOLT,KIA_HVBAT_CMU143_VOLT,KIA_HVBAT_CMU144_VOLT,KIA_HVBAT_CMU145_VOLT,KIA_HVBAT_CMU146_VOLT,KIA_HVBAT_CMU147_VOLT,KIA_HVBAT_CMU148_VOLT,KIA_HVBAT_CMU149_VOLT,KIA_HVBAT_CMU150_VOLT,KIA_HVBAT_CMU151_VOLT,KIA_HVBAT_CMU152_VOLT,KIA_HVBAT_CMU153_VOLT,KIA_HVBAT_CMU154_VOLT,KIA_HVBAT_CMU155_VOLT,KIA_HVBAT_CMU156_VOLT,KIA_HVBAT_CMU157_VOLT,KIA_HVBAT_CMU158_VOLT,KIA_HVBAT_CMU159_VOLT,KIA_HVBAT_CMU160_VOLT
   - 7E4.7EC.22010C|fc=1:KIA_HVBAT_CMU161_VOLT,KIA_HVBAT_CMU162_VOLT,KIA_HVBAT_CMU163_VOLT,KIA_HVBAT_CMU164_VOLT,KIA_HVBAT_CMU165_VOLT,KIA_HVBAT_CMU166_VOLT,KIA_HVBAT_CMU167_VOLT,KIA_HVBAT_CMU168_VOLT,KIA_HVBAT_CMU169_VOLT,KIA_HVBAT_CMU170_VOLT,KIA_HVBAT_CMU171_VOLT,KIA_HVBAT_CMU172_VOLT,KIA_HVBAT_CMU173_VOLT,KIA_HVBAT_CMU174_VOLT,KIA_HVBAT_CMU175_VOLT,KIA_HVBAT_CMU176_VOLT,KIA_HVBAT_CMU177_VOLT,KIA_HVBAT_CMU178_VOLT,KIA_HVBAT_CMU179_VOLT,KIA_HVBAT_CMU180_VOLT,KIA_HVBAT_CMU181_VOLT,KIA_HVBAT_CMU182_VOLT,KIA_HVBAT_CMU183_VOLT,KIA_HVBAT_CMU184_VOLT,KIA_HVBAT_CMU185_VOLT,KIA_HVBAT_CMU186_VOLT,KIA_HVBAT_CMU187_VOLT,KIA_HVBAT_CMU188_VOLT,KIA_HVBAT_CMU189_VOLT,KIA_HVBAT_CMU190_VOLT,KIA_HVBAT_CMU191_VOLT,KIA_HVBAT_CMU192_VOLT
