--- a/tests/test_cases/2019/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.22E001.yaml
@@ -49,6 +49,42 @@ test_cases:
     7E825BF016275640000
     7E82600253B09
 - expected_values:
+    KIA_EIT: 44.25
+    KIA_EOT: 93.00353
+    KIA_IAT: 44.25231
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4CF467C1753
+    7E822000000002F0153
+    7E82358805146000049
+    7E82400C5FD035C0000
+    7E82520017BBC640000
+    7E82660207807
+- expected_values:
+    KIA_EIT: 38.25
+    KIA_EOT: 93.75354
+    KIA_IAT: 38.25216
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4CF4684114C
+    7E82200000000750020
+    7E8231980220C00003E
+    7E82400CEFD035C0000
+    7E825510173BD640000
+    7E826801F2207
+- expected_values:
+    KIA_EIT: 30
+    KIA_EOT: 93.75354
+    KIA_IAT: 30.00195
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100D4CF48481952
+    7E82200000000C000F0
+    7E82332802C19000049
+    7E82400C5FD035C0000
+    7E825930168BD640000
+    7E82600237808
+- expected_values:
     KIA_EIT: 62.25
     KIA_EOT: 86.25336
     KIA_IAT: 62.25276
