--- a/tests/test_cases/2019/commands/7E0.7E8.22E004.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.22E004.yaml
@@ -12,6 +12,27 @@ test_cases:
   response: |-
     7E8101962E004FFFF03
     7E82100FDD0C877F476
+    7E822B810F08030D8F7
+    7E823F720FF1010
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0C877F476
+    7E822BB10F08030D8F3
+    7E823F320FF1010
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD0C877F476
+    7E822BB10F08030D8F7
+    7E823F720FF1010
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD1C877F076
     7E822BB10F08030D8F7
     7E823F720FF1010
 - expected_values:
