--- a/tests/test_cases/2019/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.22E00A.yaml
@@ -12,6 +12,17 @@ test_cases:
     7E8223148B880BF6403
     7E8235AD02053
 - expected_values:
+    KIA_KNOCK_LEARN_1: 16.6
+    KIA_KNOCK_RETARD_1: -9.8
+    KIA_KNOCK_RETARD_2: -12.8
+    KIA_KNOCK_RETARD_3: -12.6
+    KIA_KNOCK_RETARD_4: 21.8
+  response: |-
+    7E8101862E00A7F0700
+    7E821000601F0207D00
+    7E8224C64CFC0C16D03
+    7E8235AF52053
+- expected_values:
     KIA_KNOCK_LEARN_1: -8.2
     KIA_KNOCK_RETARD_1: -12.4
     KIA_KNOCK_RETARD_2: -25.6
@@ -23,6 +34,17 @@ test_cases:
     7E8224247C280BF4D03
     7E8235AD020D7
 - expected_values:
+    KIA_KNOCK_LEARN_1: 21.4
+    KIA_KNOCK_RETARD_1: -9.8
+    KIA_KNOCK_RETARD_2: -12.8
+    KIA_KNOCK_RETARD_3: -12.6
+    KIA_KNOCK_RETARD_4: 21.8
+  response: |-
+    7E8101862E00A7F0700
+    7E82100200108217D00
+    7E8224C64CFC0C16D03
+    7E8235AF5206B
+- expected_values:
     KIA_KNOCK_LEARN_1: -18.2
     KIA_KNOCK_RETARD_1: -12.4
     KIA_KNOCK_RETARD_2: -25.6
@@ -33,6 +55,17 @@ test_cases:
     7E821002400E7209B00
     7E8224247C280BF4B03
     7E8235AD020A5
+- expected_values:
+    KIA_KNOCK_LEARN_1: 23.2
+    KIA_KNOCK_RETARD_1: -9.8
+    KIA_KNOCK_RETARD_2: -12.8
+    KIA_KNOCK_RETARD_3: -12.6
+    KIA_KNOCK_RETARD_4: 23.2
+  response: |-
+    7E8101862E00A7F0700
+    7E821002E0162207D00
+    7E8224C64CFC0C17403
+    7E8235AF52074
 - expected_values:
     KIA_KNOCK_LEARN_1: -16.6
     KIA_KNOCK_RETARD_1: -12.4
