Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -23,6 +23,17 @@ test_cases:
     7BB240C372DFFFF0058
     7BB25FF01FF00000000
 - expected_values:
+    KIA_TEMP_EXT: 2
+    KIA_TEMP_INT: 8.5
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF61545202EF
+    7BB229702EFFFFF0EFF
+    7BB23FFFFFFFFFFFF10
+    7BB243C567AFFFF008E
+    7BB25FF01FF00000000
+- expected_values:
     KIA_TEMP_EXT: 1.5
     KIA_TEMP_INT: 9
     KIA_VSS: 0
