Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -23,6 +23,17 @@ test_cases:
     7BB240C372DFFFF0058
     7BB25FF01FF00000000
 - expected_values:
+    KIA_TEMP_EXT: 6
+    KIA_TEMP_INT: 6.5
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF5D5C5501EF
+    7BB22C401EFFFFF0EFF
+    7BB23FFFFFFFFFFFF10
+    7BB243C4CB8FFFF0073
+    7BB25FF01FF00000000
+- expected_values:
     KIA_TEMP_EXT: 6.5
     KIA_TEMP_INT: 8
     KIA_VSS: 0
