Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -133,6 +133,18 @@ test_cases:
     7E825070180BF647CFF
     7E826A00C0000AAAAAA
 - expected_values:
+    KIA_EIT: 22.5
+    KIA_EOT: 38.25216
+    KIA_IAT: 22.50176
+  response: |-
+    7E8102D62E0019FB7FF
+    7E8210000004E000061
+    7E822000000004D01D1
+    7E82362402C180000F6
+    7E8240085FD03560000
+    7E825DC015E734E0702
+    7E826800C0000AAAAAA
+- expected_values:
     KIA_EIT: 58.5
     KIA_EOT: 93.00353
     KIA_IAT: 58.50266
